--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,19 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>0.4.4</version>
+                <configuration>
+                    <appName>ejemplo</appName>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -jar target/dependency/jetty-runner.jar --port $PORT target/*.war</web>
+                    </processTypes>
+                    <stack>cedar-14</stack>
+                    <jdkVersion>1.</jdkVersion>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
