--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.sise</groupId>
     <artifactId>AppHeraku</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
+    <packaging>war</packaging>
 
     <name>AppHeraku</name>
 
@@ -48,6 +48,7 @@
                     <appName>ejemplo</appName>
                     <processTypes>
                         <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                        <worker>java $JAVA_OPTS -cp target/classes:target/dependency/* Worker</worker>
                     </processTypes>
                     <stack>cedar-14</stack>
                     <jdkVersion>1.</jdkVersion>
