--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
             <version>9.2.1.jre8</version>
         </dependency>
         
-     
+        <!-- https://mvnrepository.com/artifact/com.github.jsimone/webapp-runner -->
+        <dependency>
+            <groupId>com.github.jsimone</groupId>
+            <artifactId>webapp-runner</artifactId>
+            <version>9.0.27.1</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
